<resources>
    <string name="app_name">YiYuanTao</string>

    <string name="home_tab_first_page">首页</string>
    <string name="home_tab_all_commodity">全部商品</string>
    <string name="home_tab_new_publish">最新揭晓</string>
    <string name="home_tab_shopping_cart">购物车</string>
    <string name="home_tab_mine">个人中心</string>
    <string name="home_page_top_text">1元淘</string>
    <string name="home_page_menu_text1">十元专区</string>
    <string name="home_page_menu_text2">最新活动</string>
    <string name="home_page_menu_text3">晒单</string>
    <string name="home_page_menu_text4">常见问题</string>
    <string name="all_commodity_text3">手机平板</string>
    <string name="all_commodity_text4">电脑办公</string>
    <string name="all_commodity_text5">影音数码</string>
    <string name="all_commodity_text6">零食饮料</string>
    <string name="all_commodity_text7">男性用品</string>
    <string name="all_commodity_text8">女性用品</string>
    <string name="all_commodity_text9">家用电器</string>
    <string name="all_commodity_text10">儿童玩具</string>
    <string name="all_commodity_text11">虚拟产品</string>
    <string name="all_commodity_text12">户外建身</string>
    <string name="all_commodity_text13">其他宝贝</string>
    <string name="text_mine">个人中心</string>
    <string name="welcome_text">您好,欢迎您来到一元淘</string>
    <string name="login_text">立即登陆/注册</string>
    <string name="shopping_cart">购物车</string>
    <string name="shopping_cart_null">您的购物车空空如也</string>
    <string name="shopping">马上夺宝</string>
    <string name="exit_text">取消</string>
    <string name="search_text">奖品搜索</string>
    <string name="add_in_cart">加入清单</string>
    <string name="regist">登录</string>
    <string name="account_name">账户</string>
    <string name="phonenum">请输入手机号码</string>
    <string name="password">登录密码</string>
    <string name="repassword">请输入登录密码</string>
    <string name="fastregist">快速注册</string>
    <string name="fandpassword">找回密码</string>
    <string name="threefast">第三方账号登录</string>
    <string name="QQregist">QQ登录</string>
    <string name="WXregist">微信登录</string>
    <string name="WBregist">微博登录</string>
    <string name="show">奖品晒单</string>
</resources>
