<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/rl_commodity_all_height"
        android:background="@color/top_bg_color"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/reg_ico_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ico_return"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist"
            android:textColor="@color/tv_rl_commodity_color"
            android:textSize="@dimen/tv_commodity_all_size"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/rb_check_commodity_color"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/rl_commodity_all_height"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textSize="@dimen/tv_commodity_all_size"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/regist_phonenum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:hint="@string/phonenum"
            android:background="@null"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/rb_check_commodity_color"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/rl_commodity_all_height"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/tv_commodity_all_size"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/regist_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:hint="@string/repassword"
            android:background="@null"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/rb_check_commodity_color"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/bt_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="regist"
        android:layout_margin="20dp"
        android:text="@string/regist"
        android:textColor="@color/tv_rl_commodity_color"
        android:background="@drawable/registerbutton_select"/>
    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rl_commodity_all_height">
        <TextView
            android:id="@+id/tv_fastregist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:onClick="fastRegist"
            android:text="@string/fastregist"/>
        <TextView
            android:id="@+id/tv_findpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:onClick="findPassword"
            android:text="@string/fandpassword"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:background="@color/rb_check_commodity_color" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/threefast" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:background="@color/rb_check_commodity_color"
            />

    </LinearLayout>
   <RadioGroup
       android:id="@+id/rg_regthird"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center">
       <RadioButton
           android:id="@+id/regist_qqre"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:button="@null"
           android:gravity="center"
           android:drawableTop="@drawable/registthird_qq_select"
           android:text="@string/QQregist"/>
       <RadioButton
           android:id="@+id/regist_wxre"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:button="@null"
           android:gravity="center"
           android:drawableTop="@drawable/registthird_wx_select"
           android:text="@string/WXregist"/>
       <RadioButton
           android:id="@+id/regist_wbre"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:button="@null"
           android:gravity="center"
           android:drawableTop="@drawable/registthird_wb_select"
           android:text="@string/WBregist"/>

   </RadioGroup>



</LinearLayout>

