<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/top_bg_color">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/shopping_cart"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        >
        <ImageView
            android:id="@+id/iv_null_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ico_shopping_cart_null"/>
        <TextView
            android:id="@+id/tv_cart_null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/iv_null_id"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/shopping_cart_null"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/tv_cart_null"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:background="@drawable/btn_bg_9"
            android:textSize="20sp"
            android:textColor="#fff"
            android:text="@string/shopping"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="猜你喜欢"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#55938e8e"/>
    </LinearLayout>
</LinearLayout>