<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@color/top_bg_color">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:textColor="#fff"
           android:textSize="20sp"
           android:text="@string/text_mine"/>
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_alignParentRight="true"
           android:layout_marginRight="10dp"
           android:src="@mipmap/ico_user_setup"/>
   </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/top_bg_color">
                <ImageView
                    android:id="@+id/iv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/user"/>
                <Button
                    android:id="@+id/btn_login_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/iv_id"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/btn_user_center_login"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:text="@string/login_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/btn_login_id"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:text="@string/welcome_text"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#55938e8e"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>