<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@color/top_bg_color">
        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ico_search"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_title"
            android:layout_centerInParent="true" />
        <ImageView
            android:id="@+id/iv_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ico_message"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">
                <com.qianfeng.yiyuantao.custom.MyViewPager
                    android:id="@+id/vp_banner"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    />
                <com.qianfeng.yiyuantao.custom.ImgNavView
                    android:id="@+id/img_nav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    app:count="3"
                    app:checkedimg="@mipmap/page_now"
                    app:uncheckedimg="@mipmap/page"
                    />
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#88746e6e"/>
            <RadioGroup
                android:id="@+id/first_page_menu_group"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/menu_tenyuan"
                    style="@style/FirstPageMenuStyle"
                    android:drawableTop="@mipmap/icon_tenyuan"
                    android:text="@string/home_page_menu_text1"/>
                <RadioButton
                    android:id="@+id/menu_new_activity"
                    style="@style/FirstPageMenuStyle"
                    android:drawableTop="@mipmap/icon_activity"
                    android:text="@string/home_page_menu_text2"/>
                <RadioButton
                    android:id="@+id/menu_show"
                    style="@style/FirstPageMenuStyle"
                    android:drawableTop="@mipmap/icon_show"
                    android:text="@string/home_page_menu_text3"/>
                <RadioButton
                    android:id="@+id/menu_help"
                    style="@style/FirstPageMenuStyle"
                    android:drawableTop="@mipmap/icon_help"
                    android:text="@string/home_page_menu_text4"/>
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/bg_prize_list_head"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="最新揭晓"/>
                <TextView
                    android:id="@+id/right_new_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@mipmap/btn_right_on_pressed"
                    android:drawablePadding="5dp"
                    android:text="显示全部"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/bg_prize_list_head"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/right_commidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@mipmap/btn_right_on_pressed"
                    android:text="人气推荐"/>
            </RelativeLayout>



        </LinearLayout>
    </ScrollView>
    



</LinearLayout>